# microservices-k8s

./: README.me  terraform.tfstate
.github/workflows/: ad.yaml  checkout.yaml  frontend.yaml  k8s-manifest-guard.yaml  product-catalog-ci.yaml  recommendation.yaml
argocd-apps/: ad-app.yaml  checkout-app.yaml  frontend-app.yaml  product-catalog-app.yaml  recommendation-app.yaml
infrastructure/: terraform.tfstate
infrastructure/eks-cluster/: .terraform.lock.hcl  0-locals.tf  10-metrics-server.tf  12-cluster-autoscaler.tf  13-aws-lbc.tf  9-helm-provider.tf  tfplan
infrastructure/eks-cluster/.helm/: repositories.yaml
kubernetes/ad/: deploy.yaml
kubernetes/checkout/: deploy.yaml
kubernetes/frontend/: deploy.yaml
kubernetes/productcatalog/: deploy.yaml
kubernetes/recommendation/: deploy.yaml
scripts/: bootstrap-argocd.sh
src/accounting/: Accounting.csproj
src/ad/: build.gradle
src/cart/src/: cart.csproj
src/cart/tests/: cart.tests.csproj
src/kafka/: Dockerfile
src/shipping/: Cargo.toml  Dockerfile
